# chip8_emulator

./: .gitignore  .nvim.lua  CMakeLists.txt  build.sh  compile_flags.txt  main.cpp  sdl_app
